# agent-trace-platform

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_ingest.py  latest.json
src/agent_trace_platform/: cli.py  demo_agent.py  eval.py  ingest.py  models.py  replay.py  schema.py  server.py  store.py
tests/: conftest.py  test_eval.py  test_replay.py  test_schema.py  test_server.py  test_store.py
