[project]
name = "agent-trace-platform"
version = "0.1.0"
description = "Streaming trace + replay + eval platform for LLM agents. Iceberg-backed, OTel-compatible."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nilesh Patel", email = "nileshpatel7048@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyiceberg[sql-sqlite,pyarrow]>=0.8",
    "duckdb>=1.1",
    "pyarrow>=17",
    "httpx>=0.27",
    "anthropic>=0.40",
    "numpy>=2.0",
    "click>=8.1",
    "structlog>=24.4",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "locust>=2.31",
]

[project.scripts]
atp = "agent_trace_platform.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_trace_platform"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
